# pmbootstrap

./: .gitignore  .gitlab-ci.yml  .shellcheckrc  COMMITSTYLE.md  CONTRIBUTING.md  README.md  maintainers.txt  pmbootstrap.py  pyproject.toml
.ci/: codespell.sh  docs.sh  integration.sh  markdown.sh  mypy.sh  pytest.sh  ruff.sh  shellcheck.sh  shellcheck_and_shfmt.sh  vermin.sh
.ci/hooks/: pre-commit
.ci/integration_tests/: force_build
docs/: Makefile  README.md  chroot.rst  conf.py  cross_compiling.md  debugging.rst  environment_variables.md  index.rst  installation.rst  mirrors.md  requirements.txt  ssh-keys.rst  usage.rst
docs/_static/: pmOS.css
docs/api/: modules.rst  pmb.build.rst  pmb.chroot.rst  pmb.commands.rst  pmb.config.rst  pmb.core.rst  pmb.helpers.rst  pmb.init.rst  pmb.install.rst  pmb.meta.rst  pmb.parse.rst  pmb.rst  pmb.types.rst
helpers/: envkernel.fish  envkernel.sh
pmb/: __init__.py  conftest.py  sandbox.py  types.py
pmb/aportgen/: __init__.py  busybox_static.py  core.py  device.py  gcc.py  grub_efi.py  linux.py  musl.py  test_device.py
pmb/chroot/: __init__.py  apk.py  apk_static.py  binfmt.py  init.py  initfs.py  initfs_hooks.py  mount.py  other.py  root.py  run.py  shutdown.py  test_apk.py  test_usrmerge.py  user.py  zap.py
pmb/ci/: __init__.py
pmb/commands/: __init__.py  apkbuild_parse.py  apkindex_parse.py  aportgen.py  base.py  bootimg_analyze.py  build.py  build_init.py  checksum.py  chroot.py  ci.py  config.py  du.py  export.py  flasher.py  gui.py  index.py  initfs.py  inspect.py  install.py  kconfig.py  kconfig_check.py  kconfig_edit.py  log.py  netboot.py  newapkbuild.py  pkgrel_bump.py  pkgver_bump.py  pull.py  qemu.py  repo_bootstrap.py  repo_missing.py  sandbox.py  shell.py  shutdown.py  sideload.py  stats.py  status.py  test.py  update.py  (+2 more)
pmb/config/: __init__.py  config.py  file.py  init.py  load.py  merge_with_args.py  other.py  pmaports.py  save.py  sudo.py  systemd.py  test_config_serde.py  test_sudo.py  workdir.py
pmb/core/: __init__.py  apkindex_block.py  arch.py  chroot.py  config.py  context.py  crosstool.py  dps.py  package_metadata.py  pkgrepo.py  sandbox.py  test_arch.py  test_chroot.py  test_pkgrepo.py  types.py
pmb/data/: abuild_overrides.sh  kconfigcheck.toml  locales  merge-hermetic.sh  merge-usr.sh  parse-pkg.sh  qemu-user-binfmt.txt
pmb/data/keys/: pmos@local-65b2aa9f.rsa.pub
pmb/data/tests/: deviceinfo.qemu-amd64  pmbootstrap.cfg
pmb/export/: __init__.py  frontend.py  odin.py  symlinks.py
pmb/flasher/: __init__.py  frontend.py  init.py  run.py  variables.py
pmb/gui/: __init__.py  pmbootstrap.gresource  pmbootstrap.gresource.xml
pmb/gui/ui/: main.ui
pmb/helpers/: __init__.py  apk.py  apk_static.py  aportupgrade.py  args.py  cli.py  devices.py  exceptions.py  file.py  frontend.py  git.py  http.py  lint.py  locale.py  logging.py  mount.py  other.py  package.py  pkgrel_bump.py  pmaports.py  repo.py  repo_bootstrap.py  repo_missing.py  run.py  run_core.py  status.py  test_devices.py  test_locale.py  toml.py  ui.py
pmb/init/: arguments.py  run.py  sandbox.py  sudo.py  sysroot.py
pmb/install/: __init__.py  _install.py  blockdevice.py  format.py  losetup.py  partition.py  recovery.py  ui.py
pmb/meta/: __init__.py  _types.py  test_cache.py
pmb/netboot/: __init__.py
pmb/parse/: __init__.py  _apkbuild.py  apkindex.py  arch.py  arguments.py  binfmt_info.py  bootimg.py  cpuinfo.py  depends.py  deviceinfo.py  kconfig.py  kconfigcheck.py  kconfiglib.py  test_apkindex.py  test_bootimg.py  test_deviceinfo.py  test_version.py  version.py
pmb/pysh/: __main__.py  lex.py
pmb/qemu/: __init__.py  run.py
pmb/sideload/: __init__.py
test/: conftest.py  test_apk.py  test_apk_static.py  test_aportgen.py  test_aportgen_device_wizard.py  test_bootimg.py  test_build_is_necessary.py  test_build_package.py  test_chroot_mount.py  test_config_pmaports.py  test_config_user.py  test_config_workdir.py  test_envkernel.py  test_file.py  test_folder_size.py  test_helpers_git.py  test_helpers_lint.py  test_helpers_package.py  test_helpers_pmaports.py  test_helpers_repo.py  test_helpers_repo_missing.py  test_helpers_ui.py  test_install.py  test_mount.py  test_newapkbuild.py  test_parse_apkbuild.py  test_parse_apkindex.py  test_parse_depends.py  test_parse_deviceinfo.py  test_parse_kconfig.py  test_pkgrel_bump.py  test_proxy.py  test_qemu_running_processes.py  test_questions.py  test_run_core.py  test_shell_escape.py  test_version.py  test_zzz_keys.py
test/aportgen/: test_device.py  test_gcc.py
test/chroot/: test_apk.py
test/config/: test_config_serde.py
test/core/: test_apkindex_block.py  test_arch.py  test_chroot.py  test_pkgrepo.py
test/data/: htc-primou-boot.img
test/data/pmaports/device/main/device-qemu-amd64/: APKBUILD
test/data/pmaports/extra-repos/systemd/dbus/: APKBUILD
test/data/pmaports/main/dbus/: APKBUILD
test/data/pmaports/main/linus-lts/: APKBUILD
test/data/pmaports/main/linus-virt/: APKBUILD
test/data/pmaports/main/postmarketos-base/: APKBUILD
test/data/pmaports/main/systemd-boot/: APKBUILD
test/data/tests/: APKBUILD.archived  APKBUILD.maintainer-comment-style  APKBUILD.maintainer-comment-style-co-maintainers  APKBUILD.maintainer-comment-style-too-many  APKBUILD.maintainer-field-style  APKBUILD.maintainer-field-style-co-maintainers  APKBUILD.maintainer-mixed-style-too-many  APKBUILD.qemu-amd64  cpuinfo-google-grouper-tegra3.txt  cpuinfo-google-kukui-krane-mt8183.txt  cpuinfo-oneplus-enchilada-sdm845.txt  cpuinfo-x86-64-desktop.txt  deviceinfo.qemu-amd64  pmbootstrap_v3.cfg
test/helpers/: test_devices.py  test_git.py  test_locale.py  test_other.py  test_package.py  test_pmaports.py
test/meta/: test_cache.py
test/parse/: test_apkbuild_private.py  test_apkindex.py  test_arguments.py  test_bootimg.py  test_cpuinfo.py  test_deviceinfo.py  test_kconfig_generation.py  test_kconfig_parsing.py  test_version.py
test/pmb_test/: const.py  git.py
test/testdata/aportgen/pmaports/cross/gcc-armhf/: APKBUILD
