[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmbootstrap"
dynamic = ["version"]
authors = [
  {name = "postmarketOS Developers", email="info@postmarketos.org"}
]
description = "A sophisticated chroot / build / flash tool to develop and install postmarketOS'"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"

[project.scripts]
pmbootstrap = "pmb:main"

[project.optional-dependencies]
test = ["pytest"]
completion = ["argcomplete"]

[project.urls]
Homepage = "https://www.postmarketos.org"

[tool.setuptools.dynamic]
version = {attr =  "pmb.__version__"}

[tool.setuptools.package-dir]
pmb = "pmb"

[tool.ruff]
line-length=100

[tool.ruff.lint]
# B006, B008: Occur in many places and aren't trivial to fix.
# D205: Not all of our docstrings have a summary yet.
# DTZ: Require many changes, unsure what the impacts would be.
# FLY002: Questionable whether this actually makes some things more readable.
# LOG015: Would require a lot of changes, might affect the logging output too.
# PERF203: Negligible performance improvement on Python 3.11 and newer, and
#          not worth the required rework.
# PLC0206: Unsure whether this makes some code more readable.
# RUF067: Occurs in many places and isn't trivial to fix.
# S108: Hard-coded temp files within chroots should be sufficiently secure.
# S404: We rely on the subprocess module, can't really avoid it.
# S603, S607: Need more investigation.
# TRY004: Arguable false positives.
# TRY300: Might change functionality in some cases, needs investigation.
ignore = ["B006", "B008", "D205", "DTZ", "FLY002", "LOG015", "PERF203", "PLC0206", "RUF067", "S108", "S404", "S603", "S607", "TRY004", "TRY300"]
extend-select = ["B", "C4", "CPY001", "D2", "FURB", "I", "N", "PERF", "PIE", "RUF", "S", "SIM", "UP"]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
# BLE001: In this case we do want to handle any exception, no way around it.
"pmb/__init__.py" = ["BLE001"]
# S310: May be worth fixing.
"pmb/helpers/http.py" = ["S310"]
# BLE001: In this case we do want to handle any exception, no way around it.
"pmb/helpers/logging.py" = ["BLE001"]
# S306: Should be fixed.
"pmb/install/format.py" = ["S306"]
# SIM905: Makes the test code less readable.
"test/parse/test_arguments.py" = ["SIM905"]
# B011: Tests shouldn't be run with python -O set anyway.
# S101: Tests should never run with assertions disabled.
# S311: Tests don't need cryptographically secure randomness.
"test/*" = ["B011", "S101", "S311"]
# RUF076: Per the Ruff documentation this is "most problematic" outside conftest.py
"test/conftest.py" = ["RUF076"]
# S105: In this case we do want a bogus token in the code.
"test/helpers/test_git.py" = ["S105"]

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]
# Enable auto-formatting of code examples in docstrings.
docstring-code-format = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--basetemp=.pytest_tmp"
]
norecursedirs = [".*", "dist", "CVS", "_darcs", "{arch}", "*.egg"]

[tool.mypy]
pretty = true

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
local_partial_types = true
no_implicit_reexport = true
strict_bytes = true
strict_equality = true
strict_equality_for_none = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
enable_error_code = [
    "exhaustive-match",
    "ignore-without-code",
    "redundant-expr",
    "redundant-self",
    "mutable-override",
    "possibly-undefined",
    "truthy-bool",
    "truthy-iterable",
    "unimported-reveal",
    "unused-awaitable",
    "unused-ignore",
]
